# mobile-robotics-engineering

./: README.md
autonomous-exploration-controller/: README.md
autonomous-exploration-controller/launch/: explore.launch
autonomous-exploration-controller/scripts/: exploring_controller.py
simulation-environment-setup/: CMakeLists.txt  README.md  package.xml
simulation-environment-setup/launch/: arena.launch
simulation-environment-setup/models/arena/: model.config
