<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_nav</name>
  <version>0.0.0</version>
  <description>Autonomous mobile robotics navigation framework featuring kinematic mapping</description>

  <maintainer email="sidhantmb@gmail.com">Sidhant Manoj Barai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
